--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My test page</title>
+    <title>Rock, Paper, Scisosrs</title>
     <!-- Fonts -->
 
     <!-- Stye Sheet-->    
@@ -13,7 +13,7 @@
   <body>
     <div class="announce">
       <h1>Rock Paper Scissors</h1>
-      <p>Open the console to see the results</p>
+      <p>Open the console to see to play the game</p>
     </div>
     
     
