--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="announce">
       <h1>Rock Paper Scissors</h1>
-      <p>Open the console to see to play the game</p>
+      <p>Open the console to play the game</p>
     </div>
     
     
