Initial HTML and CSS for web interface

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       <h1>Rock Paper Scissors</h1>
       <p>Open the console to play the game</p>
     </div>
+
+    <div class="keys">
+      <div id="rock" class="key">Rock</div>
+      <div id="paper" class="key">Paper</div>
+      <div id="scissors" class="key">Scissors</div>
+    </div>
     
     
   </body>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </html>
