add basic layout and styles to UI

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p>Open the console to play the game</p>
     </div>
 
-    <div class="keys">
+    <div class="container">
       <div id="rock" class="key">Rock</div>
       <div id="paper" class="key">Paper</div>
       <div id="scissors" class="key">Scissors</div>
@@ -24,5 +24,5 @@
     
     
   </body>
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script> 
 </html>
