Change division to button elements
Updated naming in CSS and JS as well

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <div class="container">
-      <div id="rock" class="key">Rock</div>
-      <div id="paper" class="key">Paper</div>
-      <div id="scissors" class="key">Scissors</div>
+      <button id="rock" class="btn">Rock</button>
+      <button id="paper" class="btn">Paper</button>
+      <button id="scissors" class="btn">Scissors</button>
     </div>
     
     
