--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <button id="paper" class="btn">Paper</button>
       <button id="scissors" class="btn">Scissors</button>
     </div>
+
+    <div>
+      <p id="roundNumber"></p>
+      <p id="choices"></p>
+      <p id="result"></p>
+      <p id="roundScoreHeader"></p>
+      <p id="roundScore"></p>
+      <p id="totalScore"></p>
+    </div>
     
     
   </body>
