--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       <p id="roundScore"></p>
       <p id="totalScore"></p>
     </div>
+    <div class="replay">
+      <p>Do you want to play again?</p>
+      <button id="yes" class="btn--1">Yes</button>
+      <button id="no" class="btn--1">No</button>      
+    </div>
     
     
   </body>
