Add keyboard shortcuts
Added shortcuts for rock, paper, scissors, and to quit. Also added
keyboard shortcuts for yes and no on the replay question. I had to
add a global variable to track the game status so that 'y' and 'n'
would not active while the game was being played.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="announce">
       <h1>Rock Paper Scissors</h1>
-      <p>Open the console to play the game</p>
+      <p>First play to 5 wins. Press 'q' or 'Q' to quit.</p>
     </div>
 
     <div class="container">
