Underline shortcut letters on buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <div class="container">
-      <button id="rock" class="btn">Rock</button>
-      <button id="paper" class="btn">Paper</button>
-      <button id="scissors" class="btn">Scissors</button>
+      <button id="rock" class="btn"><span class="underline">R</span>ock</button>
+      <button id="paper" class="btn"><span class="underline">P</span>aper</button>
+      <button id="scissors" class="btn"><span class="underline">S</span>cissors</button>
     </div>
 
     <div>
@@ -32,8 +32,8 @@
     </div>
     <div class="replay">
       <p>Do you want to play again?</p>
-      <button id="yes" class="btn--1">Yes</button>
-      <button id="no" class="btn--1">No</button>      
+      <button id="yes" class="btn--1"><span class="underline">Y</span>es</button>
+      <button id="no" class="btn--1"><span class="underline">N</span>o</button>      
     </div>
     
     
