--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="announce">
       <h1>Rock Paper Scissors</h1>
-      <p>First play to 5 wins. Press 'q' or 'Q' to quit.</p>
+      <p>First player to 5 wins. Press 'q' or 'Q' to quit.</p>
     </div>
 
     <div class="container">
