Add focus and active pseudo classes in CSS

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </div>
     <div class="replay">
       <p>Do you want to play again?</p>
-      <button id="yes" class="btn--1"><span class="underline">Y</span>es</button>
-      <button id="no" class="btn--1"><span class="underline">N</span>o</button>      
+      <button id="yes" class="btn-1"><span class="underline">Y</span>es</button>
+      <button id="no" class="btn-1"><span class="underline">N</span>o</button>      
     </div>
     
     
