Add basic color to buttons, remove console.logs

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="styles.css" media="screen">
   </head>
   
-  <body>
+  <body class="body">
     <div class="announce">
       <h1>Rock Paper Scissors</h1>
       <p>First player to 5 wins. Press 'q' or 'Q' to quit.</p>
     </div>
 
     <div class="container">
-      <button id="rock" class="btn"><span class="underline">R</span>ock</button>
-      <button id="paper" class="btn"><span class="underline">P</span>aper</button>
-      <button id="scissors" class="btn"><span class="underline">S</span>cissors</button>
+      <button id="rock" class="btn btn-rps"><span class="underline">R</span>ock</button>
+      <button id="paper" class="btn btn-rps"><span class="underline">P</span>aper</button>
+      <button id="scissors" class="btn btn-rps"><span class="underline">S</span>cissors</button>
     </div>
 
     <div>
@@ -32,10 +32,9 @@
     </div>
     <div class="replay">
       <p>Do you want to play again?</p>
-      <button id="yes" class="btn-1"><span class="underline">Y</span>es</button>
-      <button id="no" class="btn-1"><span class="underline">N</span>o</button> 
+      <button id="yes" class="btn btn-replay"><span class="underline">Y</span>es</button>
+      <button id="no" class="btn btn-replay"><span class="underline">N</span>o</button> 
     </div>
-    
     
   </body>
   <script src="script.js"></script> 
