Add color coding to results

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button id="scissors" class="btn btn-rps"><span class="underline">S</span>cissors</button>
     </div>
 
-    <div>
+    <div class="center">
       <p id="roundNumber"></p>
       <p id="choices"></p>
       <p id="result"></p>
@@ -30,6 +30,7 @@
       <p id="roundScore"></p>
       <p id="totalScore"></p>
     </div>
+
     <div class="replay">
       <p>Do you want to play again?</p>
       <button id="yes" class="btn btn-replay"><span class="underline">Y</span>es</button>
