Add icons to selection buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scisosrs</title>
     <!-- Fonts -->
+    <script src="https://kit.fontawesome.com/6326b255ea.js" crossorigin="anonymous"></script>
 
     <!-- Stye Sheet-->    
     <link rel="stylesheet" href="styles.css" media="screen">
@@ -13,13 +14,13 @@
   <body class="body">
     <div class="announce">
       <h1>Rock Paper Scissors</h1>
-      <p>First player to 5 wins. Press 'q' or 'Q' to quit.</p>
+      <p>First player to 5 wins. Press 'q' to quit.</p>
     </div>
 
     <div class="container">
-      <button id="rock" class="btn btn-rps"><span class="underline">R</span>ock</button>
-      <button id="paper" class="btn btn-rps"><span class="underline">P</span>aper</button>
-      <button id="scissors" class="btn btn-rps"><span class="underline">S</span>cissors</button>
+      <button id="rock" class="btn btn-rps"><i class="far fa-hand-rock"></i><br><span class="underline">R</span>ock</button>
+      <button id="paper" class="btn btn-rps"><i class="far fa-hand-paper"></i><br><span class="underline">P</span>aper</button>
+      <button id="scissors" class="btn btn-rps"><i class="far fa-hand-scissors"></i><br><span class="underline">S</span>cissors</button>
     </div>
 
     <div class="center">
