Center stats with flexbox
Using Flexbox results in a more consistent centering of the text
on the screen. This was accmplished by putting the stats into the
same `div` that held the selection buttons. Initially, this resulted
in the stats being to the side rather than below the buttons. I fixed
that issue by setting flex-wrap to wrap and putting in a `div` with a width of 100vw to force a
line break in the flexbox.

Also minor formatting fixes of button placement on small screens.

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
       <button id="rock" class="btn btn-rps"><i class="far fa-hand-rock"></i><br><span class="underline">R</span>ock</button>
       <button id="paper" class="btn btn-rps"><i class="far fa-hand-paper"></i><br><span class="underline">P</span>aper</button>
       <button id="scissors" class="btn btn-rps"><i class="far fa-hand-scissors"></i><br><span class="underline">S</span>cissors</button>
-    </div>
+    
+      <div class="break"></div>
 
-    <div class="center">
-      <p id="roundNumber"></p>
-      <p id="choices"></p>
-      <p id="result"></p>
-      <p id="roundScoreHeader"></p>
-      <p id="roundScore"></p>
-      <p id="totalScore"></p>
-    </div>
-
+      <div class="stats">
+        <p id="roundNumber"></p>
+        <p id="choices"></p>
+        <p id="result"></p>
+        <p id="roundScoreHeader"></p>
+        <p id="roundScore"></p>
+        <p id="totalScore"></p>
+      </div>
+  </div>
     <div class="replay">
       <p>Do you want to play again?</p>
       <button id="yes" class="btn btn-replay"><span class="underline">Y</span>es</button>
-      <button id="no" class="btn btn-replay"><span class="underline">N</span>o</button> 
     </div>
     
   </body>
