--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="break"></div>
 
       <table id="table" class="table border">
-        <tr id="tableRound"> <!-- Round Numbers-->
-          <th>Round</th>
+        <tr id="tableRound" class="tableRow"> <!-- Round Numbers-->
+          <th></th>
           <th></th>
           
         </tr>
